src/ui/sonarr_ui/history/snapshots/managarr__ui__sonarr_ui__history__history_ui_tests__tests__snapshot_tests__history_tab_HistoryItemDetails.snap
---
source: src/ui/sonarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Source Title ▼                                                Event Type               Language             Quality               Date                            
=> Test source                                                   grabbed                  English              Bluray-1080p          2024-02-10 07:28:45 UTC         
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                         ╭───────────────────────────────────  Details  ───────────────────────────────────╮                                         
                                         │Source Title: Test source                                                        │                                         
                                         │Indexer:                                                                         │                                         
                                         │Release Group:                                                                   │                                         
                                         │Series Match Type:                                                               │                                         
                                         │NZB Info URL:                                                                    │                                         
                                         │Download Client Name:                                                            │                                         
                                         │Age: 0 days                                                                      │                                         
                                         │Published Date: 1970-01-01 00:00:00 UTC                                          │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         ╰─────────────────────────────────────────────────────────────────────────────────╯
