src/ui/sonarr_ui/history/snapshots/managarr__ui__sonarr_ui__history__history_ui_tests__tests__snapshot_tests__history_tab_HistorySortPrompt.snap
---
source: src/ui/sonarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Source Title                                                  Event Type               Language             Quality               Date                            
=> Test source                                                   grabbed                  English              Bluray-1080p          2024-02-10 07:28:45 UTC         
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                  ╭───────────────────────────────╮                                                                  
                                                                  │Something                      │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  ╰───────────────────────────────╯
