src/ui/sonarr_ui/history/snapshots/managarr__ui__sonarr_ui__history__history_ui_tests__tests__snapshot_tests__history_ui_renders_with_history_items.snap
---
source: src/ui/sonarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Source Title                                                  Event Type               Language             Quality               Date                            
=> Test.Series.S01E01                                            unknown                                                             1970-01-01 00:00:00 UTC         
   Another.Series.S02E05                                         unknown                                                             1970-01-01 00:00:00 UTC
